add navbar, nav, pagination, and progress

--- a/scss/component/_badge.scss
+++ b/scss/component/_badge.scss
@@ -19,7 +19,7 @@
         }
 
         // Add hover effects, but only for links
-        &[href] {
+        @at-root a#{&} {
             @include hover-focus {
                 text-decoration: none;
             }
