--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -171,6 +171,29 @@ $enable-navbar-toggle:                      true !default;
 $enable-navbar-light:                       true !default;
 $enable-navbar-dark:                        true !default;
 
+// Nav
+$enable-nav:                                true !default;
+$enable-nav-tabs:                           true !default;
+$enable-nav-pills:                          true !default;
+$enable-nav-vertical:                       true !default;
+$enable-nav-fill:                           true !default;
+$enable-nav-justify:                        true !default;
+$enable-tab-content:                        true !default;
+
+// Pagination
+$enable-pagination:                         true !default;
+$enable-pagination-spaced:                  true !default;
+$enable-pagination-group:                   true !default;
+$enable-pagination-sizing:                  true !default;
+
+// Progress
+$enable-progress:                           true !default;
+$enable-progress-striped:                   true !default;
+$enable-progress-animated:                  true !default;
+
+//Dropdown
+$enable-dropdown:                           true !default;
+
 // Utility Options
 $enable-utility-bg:                         true !default;
 $enable-utility-bg-colors:                  true !default;
