--- a/scss/mixins/_badge.scss
+++ b/scss/mixins/_badge.scss
@@ -4,7 +4,7 @@
     background-color: $bg;
     border-color: $border;
 
-    &[href] {
+    @at-root a#{&} {
         @include hover-focus {
             color: $hover-color;
             background-color: $hover-bg;
