Adjust `.sr-only-*` with !important, update focusable variants

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -4,7 +4,7 @@
 {% include head.html %}
 </head>
 <body>
-    <a class="skipnav" href="#content">Skip to main content</a>
+    <a class="skipnav sr-only-focusable" href="#content">Skip to main content</a>
 
     {% include nav-main.html %}
 
